# claude-code-rust

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Cargo.toml.example  Dockerfile.ci  README.md  build.rs  docker-compose.test.yml  sync-docs.sh
crates/cc-auth/: Cargo.toml
crates/cc-auth/src/: api_key.rs  codex_cli.rs  lib.rs  token.rs
crates/cc-auth/src/oauth/: mod.rs  pkce.rs
crates/cc-bootstrap/: Cargo.toml
crates/cc-bootstrap/src/: ids.rs  model.rs  state.rs
crates/cc-browser/: Cargo.toml
crates/cc-browser/src/: detection.rs  lib.rs  mcp_bridge.rs  permissions.rs  session.rs  setup.rs  state.rs  transport.rs
crates/cc-compact/: Cargo.toml
crates/cc-compact/src/: auto_compact.rs  compaction.rs  context_analysis.rs  lib.rs  messages.rs  microcompact.rs  pipeline.rs  snip.rs  tool_result_budget.rs
crates/cc-config/: Cargo.toml
crates/cc-config/src/: constants.rs  features.rs  lib.rs  paths.rs  runtime_settings.rs  settings.rs  validation.rs
crates/cc-engine/: Cargo.toml
crates/cc-engine/src/: lib.rs
crates/cc-engine/src/status_line/: payload.rs  runner.rs
crates/cc-engine/src/types/: app_state.rs  config.rs  mod.rs  tool.rs
crates/cc-keybindings/: Cargo.toml
crates/cc-keybindings/src/: lib.rs  registry.rs
crates/cc-mcp/: Cargo.toml
crates/cc-mcp/src/: client.rs  client_tests.rs  discovery.rs  lib.rs  manager.rs  transport.rs
crates/cc-observability/: Cargo.toml
crates/cc-observability/src/: context.rs  lib.rs  sink.rs
crates/cc-permissions/: Cargo.toml
crates/cc-permissions/src/: bash_matcher.rs  dangerous.rs  decision.rs  path_validation.rs  rules.rs
crates/cc-sandbox/: Cargo.toml
crates/cc-sandbox/src/: network.rs  policy.rs  runner.rs
crates/cc-services/: Cargo.toml
crates/cc-services/src/: lib.rs  session_memory.rs
crates/cc-session/: Cargo.toml  build.rs
crates/cc-session/src/: audit_export.rs  export.rs  fork.rs  lib.rs  memdir.rs  migrations.rs  resume.rs  storage.rs  transcript.rs
crates/cc-session/src/session_export/: builders.rs  compression.rs  mod.rs  tests.rs
crates/cc-types/: Cargo.toml
crates/cc-types/src/: agent_channel.rs  agent_events.rs  agent_types.rs  background_agents.rs  commands.rs  hooks.rs  lib.rs  permissions.rs  plan_workflow.rs  state.rs  teams.rs
crates/cc-utils/: Cargo.toml  build.rs
crates/cc-utils/src/: bash.rs  git.rs  lib.rs  messages.rs  tokens.rs
crates/claude-code-rs/: Cargo.toml  build.rs
crates/claude-code-rs/src/: dashboard.rs  main.rs  plan_workflow.rs  shutdown.rs
crates/claude-code-rs/src/api/: bedrock.rs  google_provider.rs  model_mapping.rs  openai_compat.rs  pricing.rs  providers.rs  retry.rs  stream_provider.rs  streaming.rs  vertex.rs
crates/claude-code-rs/src/auth/: codex_cli.rs  mod.rs
crates/claude-code-rs/src/bootstrap/: diagnostics.rs  mod.rs  signal.rs
crates/claude-code-rs/src/browser/: detection.rs  mcp_bridge.rs  mod.rs  native_host.rs  permissions.rs  prompt.rs  state.rs
crates/claude-code-rs/src/commands/: add_dir.rs  advisor.rs  agents_cmd.rs  assistant.rs  branch.rs  brief.rs  btw.rs  chrome_cmd.rs  clear.rs  commit.rs  config_cmd.rs  context.rs  copy.rs  doctor.rs  dream.rs  export.rs  extra_usage.rs  fast.rs  files.rs  gbranch.rs  help.rs  hooks_cmd.rs  ide_cmd.rs  insights.rs  logout.rs  loop_cmd.rs  mcp_cmd.rs  memory.rs  mod.rs  permissions_cmd.rs  plan.rs  plugin_cmd.rs  rate_limit.rs  recap.rs  reload_plugins_cmd.rs  rename.rs  rewind.rs  sandbox_cmd.rs  schedule.rs  security_review.rs  (+10 more)
crates/claude-code-rs/src/compact/: compaction.rs  microcompact.rs  snip.rs  tool_result_budget.rs
crates/claude-code-rs/src/computer_use/: mod.rs
crates/claude-code-rs/src/config/: claude_md.rs  constants.rs  features.rs  mod.rs  settings.rs  validation.rs
crates/claude-code-rs/src/daemon/: memory_log.rs  routes.rs  sse.rs  webhook.rs
crates/claude-code-rs/src/engine/: codex_exec.rs  input_processing.rs  mod.rs  output_style.rs  result.rs  system_prompt.rs
crates/claude-code-rs/src/ide/: mod.rs
crates/claude-code-rs/src/ipc/: agent_channel.rs  agent_events.rs  agent_handlers.rs  agent_settings.rs  agent_settings_generate.rs  agent_types.rs  builtin_agents.rs  callbacks.rs  file_search.rs  headless.rs  ingress.rs  mod.rs  query_runner.rs  runtime.rs  sdk_mapper.rs  sink.rs  subsystem_events.rs  subsystem_handlers.rs  subsystem_types.rs
crates/claude-code-rs/src/keybindings/: defaults.rs
crates/claude-code-rs/src/lsp_service/: client.rs  mod.rs  transport.rs  types.rs
crates/claude-code-rs/src/mcp/: discovery.rs  manager.rs  mod.rs  tools.rs  transport.rs
crates/claude-code-rs/src/observability/: event.rs
crates/claude-code-rs/src/permissions/: bash_matcher.rs  decision.rs  mod.rs  path_validation.rs  rules.rs
crates/claude-code-rs/src/plugins/: loader.rs  manifest.rs  mod.rs  refresh.rs  tools.rs
crates/claude-code-rs/src/query/: deps.rs  loop_helpers.rs  loop_impl.rs  mod.rs  stop_hooks.rs
crates/claude-code-rs/src/sandbox/: filesystem.rs  mode.rs  network.rs  runner.rs
crates/claude-code-rs/src/services/: mod.rs  onboarding.rs  session_analytics.rs  session_memory.rs
crates/claude-code-rs/src/session/: audit_export.rs  export.rs  memdir.rs  storage.rs
crates/claude-code-rs/src/skills/: mod.rs
crates/claude-code-rs/src/startup/: fast_paths.rs  logging.rs  runtime_config.rs
crates/claude-code-rs/src/teams/: backend.rs  context.rs  helpers.rs  identity.rs  in_process.rs  mailbox.rs  mod.rs  protocol.rs  runner.rs  types.rs
crates/claude-code-rs/tests/: cc_rust_home_subprocess.rs  conftest.py  e2e_audit_export.rs  e2e_chrome_mcp_bridge.rs  e2e_chrome_native_host.rs  e2e_cli.rs  e2e_compact.rs  e2e_context_cmd.rs  e2e_hooks.rs  e2e_keybindings.rs  e2e_lsp.rs  e2e_memory_scopes.rs  e2e_model_effort_style.rs  e2e_permissions.rs  e2e_plan_cmd.rs  e2e_pty.rs  e2e_sandbox.rs  e2e_services.rs  e2e_session_export.rs  e2e_settings.rs  e2e_statusline.rs  e2e_tools.rs  e2e_voice.rs  test_e2e_smoke.py  test_workspace.rs
sdk/python/: BUILD.md  README.md  pyproject.toml
src/: cli.rs  (+4 more)
(+1276 files in other folders)
