[package]
name = "claude-code-rs"
version = "0.1.0"
edition = "2021"
description = "Claude Code CLI - Rust implementation"

# ============================================================
# 核心类型 + 状态机
# ============================================================

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"
thiserror = "2"

# CLI 参数解析
clap = { version = "4", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 时间处理
chrono = "0.4"

# LRU 缓存
lru = "0.12"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ============================================================
# 本地工具系统
# ============================================================

# 文件搜索 & 路径
glob = "0.3"
ignore = "0.4"
walkdir = "2"
dirs = "6"

# 正则表达式
regex = "1"

# Git 操作
git2 = { version = "0.19", default-features = false, features = ["https"] }

# 文本 Diff
similar = "2"

# 进程管理
shell-words = "1"

# 文件锁
fs4 = "0.12"

# ============================================================
# 终端 UI
# ============================================================

# 终端 UI
ratatui = "0.29"
crossterm = "0.28"

# 语法高亮
syntect = "5"

# 文本处理
textwrap = "0.16"
unicode-width = "0.2"
strip-ansi-escapes = "0.2"

# Markdown 渲染
pulldown-cmark = "0.12"

# 编码
base64 = "0.22"
bytes = "1"
url = "2"
semver = "1"

# ============================================================
# Phase 9+: 网络 / API / 认证 / 高级功能
# ============================================================

# 网络
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
eventsource-stream = "0.2"

# 认证
keyring = "3"
jsonwebtoken = "9"
oauth2 = "5"

# AWS Bedrock
aws-config = "1"
aws-sdk-bedrockruntime = "1"

# GCP Vertex
gcp_auth = "0.12"

# LSP
lsp-types = "0.97"

# AST / 图像
tree-sitter = "0.24"
image = "0.25"

# ============================================================
# Web UI (Axum HTTP server + embedded SPA)
# ============================================================

axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rust-embed = "8"
mime_guess = "2"
