[package]
name = "claude-code-rs"
version = "0.1.0"
edition = "2021"
description = "Claude Code CLI - Rust implementation (lite)"

# ============================================================
# Features
# ============================================================
#
# default — minimal build: no telemetry, no embedded web assets,
#           no image/syntect/tree-sitter pulls. Keeps `cargo build`
#           fast and avoids heavy native deps (onig, tonic/prost).
#
# Opt-in:
#   telemetry   — Langfuse + OpenTelemetry export (pulls tonic/prost).
#   web-ui      — Embed the React SPA (rust-embed) into the binary.
#   image       — Image decoding (png/jpeg only).
#   syntect     — Syntax highlighting via fancy-regex (no onig C dep).
#   tree-sitter — AST parsing.

[features]
default = []
telemetry = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-langfuse",
]
web-ui = ["dep:rust-embed"]
image = ["dep:image"]
syntect = ["dep:syntect"]
tree-sitter = ["dep:tree-sitter"]

# ============================================================
# 核心类型 + 状态机
# ============================================================

[dependencies]
# 异步运行时 — 按需选择 tokio 子模块，避免 `full` 带来的编译开销
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "io-std",
    "net",
    "fs",
    "process",
    "signal",
    "sync",
    "time",
] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"
thiserror = "2"

# CLI 参数解析
clap = { version = "4", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# LRU 缓存
lru = "0.12"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Telemetry stack (Langfuse + OpenTelemetry) — optional, enable via `telemetry` feature.
# Pulls in tonic/prost et al., which is why it is off by default.
tracing-opentelemetry = { version = "0.32.1", optional = true }
opentelemetry = { version = "0.31", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"], optional = true }
opentelemetry-langfuse = { version = "0.6.1", optional = true }

# LSP 协议类型
lsp-types = "0.97"

# ============================================================
# 本地工具系统
# ============================================================

# 文件搜索 & 路径
glob = "0.3"
ignore = "0.4"
walkdir = "2"
dirs = "6"

# 正则表达式
regex = "1"

# Git 操作
git2 = { version = "0.19", default-features = false, features = ["https"] }

# 文本 Diff
similar = "2"

# 进程管理
shell-words = "1"

# ============================================================
# 终端 UI
# ============================================================

ratatui = "0.29"
crossterm = "0.28"

# 语法高亮 — optional，启用 default-fancy 用 fancy-regex 代替 onig (避免 C 编译)
syntect = { version = "5", default-features = false, features = ["default-fancy"], optional = true }

# 文本处理
textwrap = "0.16"
unicode-width = "0.2"
strip-ansi-escapes = "0.2"

# Markdown 渲染
pulldown-cmark = "0.12"

# 哈希 (审计记录完整性)
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# 编码
base64 = "0.22"
bytes = "1"
url = "2"
urlencoding = "2"
semver = "1"

# ============================================================
# 网络 / API / 认证
# ============================================================

# 网络 — native-tls works with Clash TUN/fake-ip environments
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
eventsource-stream = "0.2"

# 认证
keyring = "3"
dotenvy = "0.15.7"

# 同步原语 (无 lock poisoning)
parking_lot = "0.12"

# Daemon HTTP server (KAIROS) + Web UI server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hmac = "0.12"
notify-rust = "4"

# Web UI: embed React SPA dist/ at compile time — optional, enable via `web-ui` feature.
rust-embed = { version = "8", optional = true }
mime_guess = "2"

# AST / 图像 — optional，默认不编译 (目前无使用点)
tree-sitter = { version = "0.24", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }

# ============================================================
# E2E 测试
# ============================================================

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
portable-pty = "0.9"
vt100 = "0.15"
which = "7"
serial_test = "3"

# POSIX syscalls (Unix socket permissions, PID liveness for Chrome native host #5)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# ============================================================
# 构建配置 - 压缩 Windows 下 pdb 体积
# ============================================================

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "packed"
