[package]
name = "cc-auth"
version = "0.1.0"
edition = "2021"
description = "Authentication (API key, OAuth, Keychain) for cc-rust"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
keyring = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
