[package]
name = "cc-browser"
version = "0.1.0"
edition = "2021"
description = "Chrome / browser MCP bridge for cc-rust"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

cc-mcp = { workspace = true }
cc-config = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
