[package]
name = "cc-compact"
version = "0.1.0"
edition = "2021"
description = "Conversation-history compaction pipeline for cc-rust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

cc-types = { workspace = true }
cc-utils = { workspace = true }
