[package]
name = "cc-config"
version = "0.1.0"
edition = "2021"
description = "Configuration, feature gates, settings, and runtime paths for cc-rust"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
