[package]
name = "cc-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol client, transport, and manager for cc-rust"

[dependencies]
tokio = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

cc-config = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
