[package]
name = "cc-observability"
version = "0.1.0"
edition = "2021"
description = "Runtime audit event logging for cc-rust (single source of truth for traceable logs)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
