[package]
name = "cc-sandbox"
version = "0.1.0"
edition = "2021"
description = "OS-level isolation + policy checks for shell/WebFetch subprocesses"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }

cc-types = { workspace = true }
cc-config = { workspace = true }
cc-utils = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
