[package]
name = "cc-session"
version = "0.1.0"
edition = "2021"
description = "Session persistence for cc-rust — conversation state, transcripts, memdir, exports"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
git2 = { workspace = true }

cc-types = { workspace = true }
cc-config = { workspace = true }
cc-utils = { workspace = true }
cc-bootstrap = { workspace = true }
cc-compact = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
