[package]
name = "cc-utils"
version = "0.1.0"
edition = "2021"
description = "Workspace-shared utilities: bash exec, file state, git ops, cwd, messages, tokens"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
lru = { workspace = true }
git2 = { workspace = true }
shell-words = { workspace = true }
serde_json = { workspace = true }

cc-types = { workspace = true }
cc-config = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
